--- a/weather-app/src/Styles/Home.css
+++ b/weather-app/src/Styles/Home.css
@@ -3,29 +3,51 @@
   display:flex;
   justify-content: center;
   margin: 160px auto;
-
- 
-   
 }
+
 .app{
   display: flex;
-  max-width:1020px;
   border: 1px solid gray;
   justify-content: center;
   width: 100%;
-  padding:25px 5px 95px;
+  height: 65vh;
+  background-image: url('../Images/sky.jpg');
   
+}
+.details-container,
+.details-weather {
+  padding: 120px;
+}
+
+.details-container{
+  position: relative;
+  width: 50%;
+}
+
+.details-container::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: 0.7;
 }
 
 .display-weather{
   order: -1;
-  width:50%;
+  margin-right: 38px;
+  margin-left:30px;
+  width: 50%;
   
+
  
 }
 .location{
-  margin-bottom: 120px;
-
+ margin-top:320px;
+ margin-left: 15px;
+ 
 }
 
 .weather-details{
@@ -38,38 +60,65 @@
 .weather-app-h1{
   display:flex;
   
-}
-
-.city-temp {
-  display:flex;
   
-}
-.temperature {
-  margin-right:20px;
-}
+  }
+  .weather-app-h1 h1{
+    font-size: 16px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    color: white;
+  }
+  
+  .city-temp {
+   display:flex;
+   flex-direction: row;
+   align-items: center;
+   padding-bottom: 0.25rem;
+  
+ }
+ .temperature {
+  font-size:6rem;
+  color: white;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+ }
 
-.grid-container{
-  display:grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap:50px;
+ .city-temp h2 {
+  margin: 0;
+ }
+
+  .grid-container{
+    display:grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap:50px;
 
 
  }
- .calender{
+ .calendar{
   display: flex;
   flex-wrap: nowrap;
-  
  }
-
+ 
  .box {
+  font-size:17px;
   flex:1;
-  background-color:rgba(128, 128, 128, 0.5);
-  border:1px solid lightgray;
+  background-color:rgba(211, 211, 211, 0.3);
+  border:1px solid rgba(255, 255, 255, 0.2);
   display: inline-block;
-  padding: 23px 10px;
+  padding: 10px 20px;
   width: 30px;
- }
+  color: white;
+  font-family: "Poppins", sans-serif;
+  text-align:center;
+  letter-spacing: 1px;
+  font-weight:500;
 
+ }
+ .box:nth-last-child(-n+3) {
+  padding-right: 30px;
+  
+}
 
  
 
