--- a/weather-app/src/Styles/Home.css
+++ b/weather-app/src/Styles/Home.css
@@ -1,8 +1,15 @@
+* {
+  font-family: "Poppins", sans-serif;
+  margin:0;
+  padding:0;
+}
+
 .container {
   align-items: center;
   display:flex;
   justify-content: center;
   margin: 160px auto;
+
 }
 
 .app{
@@ -12,28 +19,16 @@
   width: 100%;
   height: 65vh;
   background-image: url('../Images/sky.jpg');
-  
-}
-.details-container,
-.details-weather {
-  padding: 120px;
+ 
 }
 
 .details-container{
   position: relative;
   width: 50%;
+  padding: 80px;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
 }
 
-.details-container::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: black;
-  opacity: 0.7;
-}
 
 .display-weather{
   order: -1;
@@ -46,13 +41,15 @@
  
 }
 .location{
- margin-top:215px;
- margin-left: 15px;
+ margin-top:260px;
+ margin-bottom: 20px;
+ 
  
 }
 
 .weather-details{
   order: -2;
+  
   
 }
 .hours-container{
@@ -69,40 +66,51 @@
     font-weight: 600;
     font-style: normal;
     color: white;
+    padding:20px 0 0 10px;
+    
+  }
+  .city {
+    margin-left: 35px;
+    
   }
   
   .city-temp {
    display:flex;
    align-items: center;
-   padding-bottom: 0.25rem;
-  
+   
  }
- .temperature {
+ .temperature h2{
   font-size:6rem;
   color: white;
   font-family: "Poppins", sans-serif;
   font-weight: 500;
+  
+  
  }
  
- .city-temp h2 {
-  margin: 0;
-
- }
- 
- .city {
+ .city  h2{
   font-size: 3rem;
+  font-weight: 500;
+  color: white;
+  padding-top:10px;
  }
 
  .date{
-  display: block;
-  
-  
+  display: inline-block;
+  color: white;
+  font-size: 14px;
+ 
+   
  }
-
+ .date-right {
+  padding-left:28px;
+ }
+ 
   .grid-container{
     display:grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-gap:50px;
+    grid-gap:180px;
+    
 
 
  }
@@ -115,7 +123,7 @@
   font-size:17px;
   flex:1;
   background-color:rgba(211, 211, 211, 0.5);
-  border:1px solid rgba(255, 255, 255, 0.2);
+  border:1px solid  rgba(169,169,169, 0.2);
   display: inline-block;
   padding: 10px 20px;
   width: 30px;
@@ -130,6 +138,39 @@
   padding-right: 30px;
   
 }
+.grid-container ul {
+  list-style: none;
+  margin-bottom: 55px;
+  
+  
+}
 
+.grid-container ul li {
+  color: white;
+  font-weight:400;
+  padding-bottom: 10px;
+  padding-right:15px;
+  
  
+ 
+}
+.left-column{
+  text-align: left;
+}
+.right-column {
+  float: right;
+  text-align: right;
+}
+
+.heading {
+  border-bottom: 2px solid gray;
+  margin-bottom:25px;
+ 
+}
+.heading h2 {
+  margin-bottom: 10px;
+  font-weight:600;
+  font-size: 17px;
+  color: white;
+}
 
