--- a/weather-app/src/Styles/Home.css
+++ b/weather-app/src/Styles/Home.css
@@ -3,12 +3,18 @@
   margin:0;
   padding:0;
 }
+body {
+  background: linear-gradient(to bottom, #796878 10%, #50404d);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
 
 .container {
   align-items: center;
   display:flex;
   justify-content: center;
   margin: 160px auto;
+ 
 
 }
 
@@ -25,8 +31,8 @@
 .details-container{
   position: relative;
   width: 50%;
-  padding: 80px;
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
+  padding: 40px 80px;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7));
 }
 
 
@@ -51,6 +57,7 @@
   order: -2;
   
   
+  
 }
 .hours-container{
   order: -3;
@@ -72,6 +79,7 @@
   .city {
     margin-left: 35px;
     
+    
   }
   
   .city-temp {
@@ -80,7 +88,7 @@
    
  }
  .temperature h2{
-  font-size:6rem;
+  font-size:6.5rem;
   color: white;
   font-family: "Poppins", sans-serif;
   font-weight: 500;
@@ -92,9 +100,10 @@
   font-size: 3rem;
   font-weight: 500;
   color: white;
-  padding-top:10px;
+  
+ 
  }
-
+ 
  .date{
   display: inline-block;
   color: white;
@@ -111,8 +120,6 @@
     grid-template-columns: repeat(2, 1fr);
     grid-gap:180px;
     
-
-
  }
  .calendar{
   display: flex;
@@ -123,7 +130,7 @@
   font-size:17px;
   flex:1;
   background-color:rgba(211, 211, 211, 0.5);
-  border:1px solid  rgba(169,169,169, 0.2);
+  border-right: 1px solid rgba(191,193,194,0.8);
   display: inline-block;
   padding: 10px 20px;
   width: 30px;
@@ -133,6 +140,9 @@
   letter-spacing: 1px;
   font-weight:500;
 
+ }
+ .box:last-child {
+  border-right: none;
  }
  .box:nth-last-child(-n+3) {
   padding-right: 30px;
@@ -160,6 +170,7 @@
 .right-column {
   float: right;
   text-align: right;
+ 
 }
 
 .heading {
