--- a/weather-app/src/Styles/Home.css
+++ b/weather-app/src/Styles/Home.css
@@ -14,17 +14,20 @@ body {
   display:flex;
   justify-content: center;
   margin: 160px auto;
+  
  
 
 }
 
+
 .app{
   display: flex;
-  border: 1px solid gray;
+  border-radius: 1px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
   justify-content: center;
   width: 100%;
   height: 65vh;
-  background-image: url('../Images/sky.jpg');
+  background-image: url('../Images/clouds.jpg');
  
 }
 
@@ -32,11 +35,14 @@ body {
   position: relative;
   width: 50%;
   padding: 40px 80px;
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7));
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8));
 }
 
 
 .display-weather{
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
   order: -1;
   margin-right: 38px;
   margin-left:30px;
@@ -44,7 +50,6 @@ body {
   padding: 15px;
   
 
- 
 }
 .location{
  margin-top:260px;
@@ -53,12 +58,11 @@ body {
  
 }
 
+
 .weather-details{
   order: -2;
-  
-  
-  
 }
+  
 .hours-container{
   order: -3;
 }
@@ -68,7 +72,7 @@ body {
   
   }
   .weather-app-h1 h1{
-    font-size: 16px;
+    font-size: 17px;
     font-family: "Poppins", sans-serif;
     font-weight: 600;
     font-style: normal;
@@ -83,37 +87,42 @@ body {
   }
   
   .city-temp {
-   display:flex;
-   align-items: center;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-bottom: 0.25rem;
    
  }
  .temperature h2{
-  font-size:6.5rem;
+  font-size:6rem;
   color: white;
   font-family: "Poppins", sans-serif;
   font-weight: 500;
-  
+ 
   
  }
  
+ 
  .city  h2{
+  margin-top:25px;
   font-size: 3rem;
   font-weight: 500;
   color: white;
+ 
   
  
  }
  
  .date{
-  display: inline-block;
+  display: flex;
   color: white;
   font-size: 14px;
- 
-   
+
  }
- .date-right {
-  padding-left:28px;
- }
+
+  .date-right{
+    margin-left: 20px;
+  }
  
   .grid-container{
     display:grid;
@@ -144,10 +153,7 @@ body {
  .box:last-child {
   border-right: none;
  }
- .box:nth-last-child(-n+3) {
-  padding-right: 30px;
-  
-}
+
 .grid-container ul {
   list-style: none;
   margin-bottom: 55px;
@@ -159,7 +165,7 @@ body {
   color: white;
   font-weight:400;
   padding-bottom: 10px;
-  padding-right:15px;
+  padding-right:2px;
   
  
  
