took .location div out. added location class to .display-weather div

--- a/weather-app/src/Styles/Home.css
+++ b/weather-app/src/Styles/Home.css
@@ -3,6 +3,7 @@
   margin:0;
   padding:0;
 }
+
 body {
   background: linear-gradient(to bottom, #796878 10%, #50404d);
   background-repeat: no-repeat;
@@ -15,10 +16,8 @@ body {
   justify-content: center;
   margin: 160px auto;
   
- 
 
 }
-
 
 .app{
   display: flex;
@@ -31,7 +30,8 @@ body {
  
 }
 
-.details-container{
+.details-container {
+  vertical-align: center;
   position: relative;
   width: 50%;
   padding: 40px 80px;
@@ -39,23 +39,16 @@ body {
 }
 
 
-.display-weather{
+.display-weather ,.location{
   display: flex;
   justify-content: space-between;
   flex-direction: column;
   order: -1;
-  margin-right: 38px;
-  margin-left:30px;
+  margin:0 30px;
   width: 50%;
   padding: 15px;
   
 
-}
-.location{
- margin-top:260px;
- margin-bottom: 20px;
- 
- 
 }
 
 
@@ -77,9 +70,9 @@ body {
     font-weight: 600;
     font-style: normal;
     color: white;
-    padding:20px 0 0 10px;
     
   }
+
   .city {
     margin-left: 35px;
     
@@ -99,7 +92,6 @@ body {
   font-family: "Poppins", sans-serif;
   font-weight: 500;
  
-  
  }
  
  
