--- a/weather-app/src/Styles/Home.css
+++ b/weather-app/src/Styles/Home.css
@@ -28,11 +28,30 @@ body {
   background-image: url('../Images/clouds.jpg');
   
 }
+.details-container::after {
+  content: "";
+  display:block;
+  height:100%;
+  width:100%;
+  background-color: black;
+  position: absolute;
+  top:0;
+  left:0;
+  opacity: .8;
+  z-index: 0;
+
+}
 
 .details-container {
+  position: relative;
   width: 50%;
   padding: 40px 80px;
   
+}
+.details-container > * {
+  z-index: 10;
+  position: relative;
+ 
 }
 
 
