--- a/weather-app/src/Styles/Home.css
+++ b/weather-app/src/Styles/Home.css
@@ -15,6 +15,7 @@ body {
   display:flex;
   justify-content: center;
   margin: 160px auto;
+  padding-bottom:20px;
   
 
 }
@@ -26,6 +27,7 @@ body {
   width: 100%;
   height: 65vh;
   background-image: url('../Images/clouds.jpg');
+ 
   
 }
 .details-container::after {
@@ -45,6 +47,7 @@ body {
 .details-container {
   position: relative;
   width: 50%;
+  margin: 0 auto;
   padding: 40px 80px;
   
 }
@@ -62,7 +65,7 @@ body {
   order: -1;
   margin:280px auto;
   width: 50%;
-  padding:45px;
+  padding:40px 70px;
   
 }
 
@@ -181,13 +184,14 @@ body {
   display: flex;
   flex-wrap: nowrap;
   
+  
  
  }
  
  .box {
   font-size:17px;
   flex:1;
-  background-color:rgba(211, 211, 211, 0.5);
+  background-color:rgba(211, 211, 211, 0.4);
   border-right: 1px solid rgba(191,193,194,0.8);
   display: inline-block;
   padding: 10px 20px;
