added search bar and search icon

--- a/weather-app/src/Styles/Home.css
+++ b/weather-app/src/Styles/Home.css
@@ -2,6 +2,7 @@
   font-family: "Poppins", sans-serif;
   margin:0;
   padding:0;
+ 
 }
 
 body {
@@ -14,10 +15,10 @@ body {
   align-items: center;
   display:flex;
   justify-content: center;
-  margin: 160px auto;
-  padding-bottom:20px;
+  margin: 100px auto;
+  padding-bottom:5px;
   
-
+  
 }
 
 .app{
@@ -25,8 +26,8 @@ body {
   border-radius: 1px;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
   width: 100%;
-  height: 65vh;
-  background-image: url('../Images/clouds.jpg');
+  background-image: url('../Images/sky.jpg');
+  
  
   
 }
@@ -47,7 +48,6 @@ body {
 .details-container {
   position: relative;
   width: 50%;
-  margin: 0 auto;
   padding: 40px 80px;
   
 }
@@ -57,15 +57,13 @@ body {
  
 }
 
-
-
 .display-weather{
   display: flex;
   flex-direction: column;
   order: -1;
-  margin:280px auto;
+  margin:0 auto;
   width: 50%;
-  padding:40px 70px;
+  padding:20px 70px;
   
 }
 
@@ -97,7 +95,47 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-top:130px;
   }
+
+  .search{
+    margin-top:120px;
+    width: 100%;
+    display:flex;
+    align-items:center;
+    justify-content: space-between;
+
+  }
+  .search input{
+    border: 0;
+    outline: 0;
+    background: #ebfffc;
+    color:#555;
+    padding: 8px 15px;
+    height: 35px;
+    border-radius: 3px;
+    flex: 1;
+    margin-right: 16px;
+    font-size:18px;
+
+
+  }
+  .search button{
+    border: 0;
+    outline:0;
+    background: #ebfffc;
+    border-radius: 50%;
+    width: 50px;
+    height:50px;
+    cursor: pointer;
+  }
+  .search button img{
+    width:16px;
+    display:block;
+    margin: 0 auto;
+  
+  }
+
   .date{
     display: flex;
     
