--- a/weather-app/src/Styles/Home.css
+++ b/weather-app/src/Styles/Home.css
@@ -109,7 +109,7 @@ body {
   .search input{
     border: 0;
     outline: 0;
-    background: #ebfffc;
+    background: whitesmoke;
     color:#555;
     padding: 8px 15px;
     height: 35px;
